# flidie_env

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  __init__.py  client.py  flidie_environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  reset_resp.txt  tasks.py  test_env.py  test_graders.py  test_http.py  test_server.py  validate-submission.sh
.github/workflows/: keep_alive.yml
data/: scenarios_easy.json  scenarios_hard.json  scenarios_medium.json
openenv_flidie_env.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
server/: __init__.py  app.py  flidie_environment.py  graders.py  tasks.py
