[project]
name = "flidie-env"
version = "1.0.0"
description = "Finance & Legal Decision Intelligence Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "python-dotenv==1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.uv]
dev-dependencies = [
    "pytest==8.2.0",
    "httpx==0.27.0",
]
