[project]
name = "flidie-env"
version = "1.0.1"
description = "Finance & Legal Decision Intelligence Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "openai>=2.7.2",
    "python-dotenv==1.0.1",
    "openenv-core>=0.2.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["flidie_env", "flidie_env.server"]
package-dir = { "flidie_env" = ".", "flidie_env.server" = "server" }

[tool.uv]
dev-dependencies = [
    "pytest==8.2.0",
    "httpx==0.27.0",
]